--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -117,16 +117,16 @@ p {
 @keyframes animate {
   0%,
   100% {
-    background-image: url(https://github.com/NickArc/Empresarial/blob/master/Imagenes/Parcial2_Sebastian_Lamprea_Trim.gif);
+    background-image: "/Imagenes/Parcial2_Sebastian_Lamprea_Trim.gif";
   }
   25% {
-    background-image: url("/Imagenes/Dona-Azul.gif");
+    background-image: "/Imagenes/Dona-Azul.gif";
   }
   50% {
-    background-image: url("/Imagenes/Brujula1.gif");
+    background-image: "/Imagenes/Brujula1.gif";
   }
   75% {
-    background-image: url("/Imagenes/CameraMapping.gif");
+    background-image: "/Imagenes/CameraMapping.gif";
   }
 }
 /*Slider Portafolio*/
